--- a/django_bookmarks/django_bookmarks/templates/user_page.html
+++ b/django_bookmarks/django_bookmarks/templates/user_page.html
@@ -1,9 +1,7 @@
-<html>
-<head>
-<title>Django Bookmarks - User: {{ username }}</title>
-</head>
-<body>
-<h1>Bookmarks for {{ username }}</h1>
+{% extends "base.html" %}
+{% block title %}{{ username }}{% endblock %}
+{% block head %}Bookmarks for {{ username }}{% endblock %}
+{% block content %}
 {% if bookmarks %}
 <ul>
 {% for bookmark in bookmarks %}
@@ -14,5 +12,4 @@
 {% else %}
 <p>No bookmarks found.</p>
 {% endif %}
-</body>
-</html>
+{% endblock %}
