--- a/django_bookmarks/django_bookmarks/templates/base.html
+++ b/django_bookmarks/django_bookmarks/templates/base.html
@@ -11,8 +11,9 @@ type="text/css" />
 <div id="nav">
 <a href="/">home</a> |
 {% if user.is_authenticated %}
-welcome {{ user.username }}
-(<a href="/logout">logout</a>)
+<a href = "/save/">submit </a>|
+<a href= "/user/{{user.username}}"> {{user.username}} </a> |
+<a href="/logout">logout</a>
 {% else %}
 <a href="/login/">login</a> |
 <a href= "/register/">register</a>
