--- a/django_bookmarks/django_bookmarks/templates/bookmark_save.html
+++ b/django_bookmarks/django_bookmarks/templates/bookmark_save.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
+{% block external %}
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all" /> <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"> </script> <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+{% endblock %}
 {% block title %}Save Bookmark{% endblock %}
 {% block head %}Save Bookmark{% endblock %}
 {% block content %}
-<form method="post" action=".">{% csrf_token %}
-{{ form.as_p }}
-<input type="submit" value="save" />
-</form>
+{% include 'bookmark_save_form.html' %}
 {% endblock %}
