--- a/django_bookmarks/django_bookmarks/templates/user_page.html
+++ b/django_bookmarks/django_bookmarks/templates/user_page.html
@@ -1,15 +1,10 @@
 {% extends "base.html" %}
+{% block external %}
+<script type = "text/javascript" src = "../site_media/bookmark_edit.js">
+</script>
+{% endblock %}
 {% block title %}{{ username }}{% endblock %}
 {% block head %}Bookmarks for {{ username }}{% endblock %}
 {% block content %}
-{% if bookmarks %}
-<ul>
-{% for bookmark in bookmarks %}
-<li><a href="{{ bookmark.link.url }}">
-{{ bookmark.title }}</a></li>
-{% endfor %}
-</ul>
-{% else %}
-<p>No bookmarks found.</p>
-{% endif %}
+{% include "bookmark_list.html" %}
 {% endblock %}
